<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="-2dp"
        android:adjustViewBounds="true"
        android:alpha="0.5"
        android:background="#FFFFFF"
        android:contentDescription="@string/image_of_map"
        android:scaleType="centerCrop"
        android:src="@drawable/map1"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#465678"
        android:backgroundTint="#465678"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/spotshare"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="normal" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        tools:context=".firebase.Signup">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#050505"
            android:textSize="34sp"
            android:textStyle="bold" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:minHeight="48dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#465678"
            android:fontFamily="@font/amaranth"
            android:text="@string/sign_up" />

    </LinearLayout>


</FrameLayout>
